# ccai-validation

./: .gitignore  AUDIT.md  README.md  SPEC.md  pyproject.toml
data/: .gitkeep
results/: llm_experiment.json  llm_experiment_deepseek_v32.json  llm_experiment_gemma3_27b.json  llm_experiment_gpt4o_mini.json  llm_experiment_haiku.json  llm_experiment_llama4_maverick.json  llm_experiment_llama4_scout.json  llm_experiment_mistral_small.json  llm_experiment_qwen35_plus.json  output.txt
results/archive/: llm_experiment_deepseek_v3.json  llm_experiment_qwen25_72b.json
src/ccai_validation/: __init__.py  cli.py  core.py  data.py  experiments.py  llm_experiment.py  mechanism.py
tests/: conftest.py  test_core.py  test_data.py  test_experiments.py  test_mechanism.py
