[project]
name = "ccai-validation"
version = "0.1.0"
description = "Empirical validation of Sharded Citizens' Assembly on CCAI Polis data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[project.scripts]
ccai-run = "ccai_validation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that require real CCAI data (deselect with '-m \"not slow\"')",
]
